
NEXT
    - Fixed bug where only one table would get loaded when using fixtures_ok
      and added tests.  (Tristan Pratt)
    - Diffs are now readable by humans when is_fixtures fails.  Changed uses
      of Test::More::is_deeply to Test::Differences::eq_or_diff so that the
      actual data structure contents are printed out instead of just
      "HASH(0x1008032b8)".  (Tristan Pratt)

0.09  28 August 2009
    - New Functionality:  Added storage trait 'Testpostgresql' which works just
      like the 'Testmysql' except deploys to a test Postgresql database.
    - Changed some tests to prevent failures to install.
    - updated the Makefile.PL so that the support for Mysql and Postgresql is
      optional.
    - New documentation to reflect the above.

0.08  27 August 2009
    - New Functionality:  Added storage trait 'Testmysql' which allows you
      to create a temporary test instance of mysql, deploy and test against
      it, and clean itself up afterward.  Now you can test against Mysql
      nearly as easily as SQLite.
    - Populating fixtures now wraps everything inside a transaction.
    - Fixed an error in the Example Schema, now Email is a varchar instead of
      an integer
    - Documentation and tests for all the above

0.07  26 August 2009
    - Create framework for 'pluggable' storage traits and migrated all the
      SQLite specific stuff to a SQLite trait.  This change will allow us
      to add traits to test replication and other types of database setups.
    - Documentation and test improvements to reflect the above.
0.06  25 August 2009
    - Documentation additions related to overridding configuration via %ENV
    - Fixes to broken POD
    - Allows the option 'force_drop_table' to be set at configuration time
    - More completely documented ::SchemaManager options
    - Some additional (undocumented) features added to the exported subroutine
      generators.  
	
0.05  24 August 2009 @ 11::55::00 UTC